--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "recharts": "^3.2.1",
+    "styled-components": "^6.1.19",
     "zod": "^4.1.11"
   },
   "devDependencies": {
