--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.22",
     "js-cookie": "^3.0.5",
@@ -32,9 +33,9 @@
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.12",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
-    "recharts": "^3.2.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
