--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
