--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,12 @@ NEXT_PUBLIC_APP_VERSION=1.0.0
 # Development Configuration
 NODE_ENV=development
 NEXT_PUBLIC_OPENROUTER_API_KEY=""
+
+# Blockchain API URL
+NEXT_PUBLIC_BLOCKCHAIN_API_URL=https://credapp-blockchain.onrender.com
+
+# NFT Contract Address (after deploying)
+NEXT_PUBLIC_NFT_CONTRACT_ADDRESS=0x55636F443668Db2361F81c93Cf92c599D9368BB7
+
+# WalletConnect Project ID (optional, get from https://cloud.walletconnect.com)
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=614ed33d650e853edcce1574b454f129
