--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@mui/x-charts": "^8.13.1",
     "@mui/x-data-grid": "^8.13.1",
     "@mui/x-date-pickers": "^8.12.0",
+    "@tanstack/react-query": "^5.90.11",
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@walletconnect/ethereum-provider": "^2.21.10",
+    "@walletconnect/modal": "^2.7.0",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.1",
@@ -36,6 +39,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "viem": "^2.40.3",
+    "wagmi": "^3.0.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
