--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "recharts": "^3.5.1",
     "viem": "^2.40.3",
     "wagmi": "^3.0.1",
     "zod": "^4.1.11"
